--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body{
     top: 0;
     background: #111;
     width: 100%;
-    height: 6vh;
+    height: 53px;
     color: #F1F1F1;
     z-index: 2;
 
@@ -46,7 +46,7 @@ body{
 .nav li{
     display: inline-block;
     position: relative;
-    margin: 10px 20px;
+    margin: 9px 20px;
     width: 150px;
     border: 2px solid #F1F1F1;
     border-radius: 10px;
@@ -75,7 +75,7 @@ body{
     margin: 0 auto;
 }
 .content hr{
-    margin: 10vh;
+    margin: 70px;
 
 }
 
